[package]
name = "taurkovsky-ui"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
gloo-console = "0.2.3"
yew = { version = "0.20", features = ["csr"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
shared_lib = { path = "./shared_lib" }
trunk = "0.18.1"
imp = "0.1.0"
# wgpu = "0.14.0"
[dependencies.web-sys]
version = "0.3.50"
features = [
  "CustomEvent",
  'Document',
  'Element',
  'HtmlCanvasElement',
  'WebGlBuffer',
  'WebGlVertexArrayObject',
  'WebGlRenderingContext',
  'WebGl2RenderingContext',
  'WebGlUniformLocation',
  'WebGlProgram',
  'WebGlShader',
  "Gpu",
  "GpuAdapter",
  'Window',
  "Navigator",
  "Node",
  "NodeList",
]
[workspace]
members = ["src-tauri"]
